style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Oswald:wght@200..700&display=swap');

body {
  font-family: 'Inter', sans-serif;
  background: #fff5f0;
  color: #4a3728;
  overflow-x: hidden;
  overflow-y: auto;
}

h2 {
  font-size: 3em;
  margin: 0;
  padding: 0;
}

p {
  font-size: 1.6em;
}

b {
  font-weight: 550;
}

header {
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.3),
      rgba(255, 255, 255, 0)
    ),
    url('img/hero.png');
    
  background-position: top right;
  background-repeat: no-repeat;
  background-size: cover;

  color: white;
  padding: 4vh;
  border-radius: 2vh;
  text-align: left;
  min-width: 35vh;
  min-height: 74vh;
  margin: 1vw;
  margin-top: 8vh;
  box-shadow: 0 0.4vh 1.2vh rgba(212, 114, 74, 0.1);

  display: flex;
  flex-direction: column;
  gap: 12vh;
}

header p {
  font-size: 5em;
}

.HebronHacks {
  font-size: 3em;
  text-align: center;
  margin-top: -8vh;
  margin-bottom: -10vh;
  font-family: "oswald", sans-serif;
}

.navbar {
  display: flex;
  justify-content: center;
  padding: 1vh;
  flex-wrap: wrap;
  position: sticky;
  top: 0;
  z-index: 100;
  background-color: #b5d9df;
  margin: -2vh;
}

.navbar a {
  text-decoration: none;
  color: #1C161D;
  font-weight: 500;
  font-size: 1.6em;
  padding: 0.8vh 1.5vh;
  border-radius: 0.5vh;
  transition: all 0.3s ease;
}

.navbar a:hover {
  background-color: #28bdbd;
}

.register-button {
  align-self: left;
  width: 10vw;
  min-width: 170px;
  margin-bottom: 4vh;

  display: inline-block;
  background-color: #ffec83;
  color: #4e2a00;
  padding: 2vh 4vw;
  text-decoration: none;
  border-radius: 0.8vh;
  font-size: 2.8em;
  font-weight: 600;
  margin-top: 1vh;
  transition: all 0.3s ease;
  box-shadow: 0 0.4vh 1.2vh rgba(43, 22, 3, 0.3);
}

.register-button:hover {
  background-color: #ffc524;
  transform: translateY(-0.2vh);
}

.info, .theme, .schedule, .about {
  background-color: #ffffff;
  padding-left: 2vw;
  margin-left: 2vw;
  padding-top: 2vh;
  margin-bottom: 2vh;
  padding-right: 2vw;
  margin-right: 2vw;

  border-radius: 2vh;
  box-sizing: border-box;
  box-shadow: 0 0.4vh 1.2vh rgba(212, 114, 74, 0.1);
  scroll-margin-top: 10vh;
}

.info, .schedule {
  border-left: 0.5vh solid #ff7c65;  
}

.info h2, .schedule h2 {
  color: #ff7c65;
}

.theme {
  border-left: 0.5vh solid #ffc524;  
}

.theme h2, .faq h2 {
  color: #ffc524;
}

.about {
  border-left: 0.5vh solid #28bdbd;  
}

.about h2, .tracks h2, .tracks h3 {
  color: #28bdbd;
}

.schedule h3 {
  font-size: 2.0em;
  font-weight: 650;
}

.schedule a {
  font-size: 2.0em;
}

.info-content, .theme-content, .schedule-content, .tracks-content, .about-content {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
}

.info-content, .theme-content, .schedule-content, .about-content {
  gap: 2em;
}

.tracks-content {
  gap: 4vw;
  padding: 2vh;
  max-width: 80vw;
  margin: 0 auto;
}

.track1, .track2, .track3 {
  flex: 1;
  text-align: center;
}

.info-p, .theme-p, .schedule-p, .about-p {
  flex: 1;
  min-width: 30vh;
}

.info-img, .theme-img, .schedule-img, .about-img {
  flex: 1;
  display: flex;
  justify-content: right;
}

.info-img img, .theme-img img, .track1 img, .track2 img, .track3 img {
  width: auto;
  height: auto;
  max-height: 30vh;
  max-width: 80vw;
  align-self: flex-end;
  border-radius: 15px;
}

.schedule-img img {
  width: auto;
  height: auto;
  max-height: 60vh;
  max-width: 80vw;
  align-self: flex-end;
  border-radius: 20px;
}

.about-img img {
  max-height: 20vh;
  width: auto;
  align-self: flex-end;
  border-radius: 20px;
  padding-bottom: 1vh;
}


.tracks {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  align-items: center;
  margin: 2vh;
}

.tracks, .faq h2 {
  text-align: center;
}

.tracks a {
  margin-bottom: 2vh;
  font-size: 1.8em;
}

.tracks p {
  font-weight: 400;
  font-size: 0.8em;
  color: #4e2a00;
}

.tracks h3 {
  font-size: 2em;
}

.faq {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  padding: 30px;
  align-items: flex-start;
  padding-left: 5vh;
}

summary {
  font-size: 1.6em;
}

.faq h2 {
  width: 100%;
  margin: 0 0 20px 0;
}

details {
  flex: 1;
  min-width: 45%;
  margin-bottom: 0;
  padding: 1.5vh;
  background-color: #ffffff;
  border-radius: 0.8vh;
  border: 0.2vh solid #ffc524;
  cursor: pointer;
}

details summary {
  color: rgb(196, 143, 0);
  font-weight: 600;
  cursor: pointer;
  user-select: none;
}

details summary:hover {
  color: #6b3900;
}

details p {
  margin-top: 1.2vh;
}

.about {
  scroll-margin-top: 5vh;
}

footer {
  display: flex;
  flex-wrap: wrap;
  font-size: 0.8em;;
  width: 100vw;
  margin: 0;
  margin-left: -2vw;
  margin-bottom: -2vh;
  margin-top: 4vh;
  padding-left: 4vw;
  background: #ff7c65;
  color: #f6fff7;
  display: flex;
  align-items: center;
  box-sizing: border-box;
}

